objects/tfn_Mgt_Actions_Work_Plan__c.object
<CustomObject>
    <fields>
        <fullName>tfn_April__c</fullName>
        <label>April</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_August__c</fullName>
        <label>August</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_December__c</fullName>
        <label>December</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_February__c</fullName>
        <label>February</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Interest__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Interest</label>
        <referenceTo>loc03__Easement_FeeTitle__c</referenceTo>
        <relationshipLabel>Mgt Actions Works Plan</relationshipLabel>
        <relationshipName>Mgt_Actions_Works_Plan</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_January__c</fullName>
        <label>January</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_July__c</fullName>
        <label>July</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_June__c</fullName>
        <label>June</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Management_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Management Action</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.tfn_Interest__c</field>
                <operation>equals</operation>
                <valueField>tfn_Management_Action__c.tfn_Interest__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tfn_Management_Action__c</referenceTo>
        <relationshipLabel>Mgt Actions Works Plan</relationshipLabel>
        <relationshipName>Mgt_Actions_Works_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_March__c</fullName>
        <label>March</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_May__c</fullName>
        <label>May</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_November__c</fullName>
        <label>November</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_October__c</fullName>
        <label>October</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_September__c</fullName>
        <label>September</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Targeted_Species_Common_Name__c</fullName>
        <formula>tfn_Management_Action__r.tfn_Targeted_Species__r.tfn_Common_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Targeted Species Common Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Work_Plan_ID__c</fullName>
        <displayFormat>WP{0000}</displayFormat>
        <label>Work Plan ID</label>
        <type>AutoNumber</type>
    </fields>
    <label>Mgt Actions Work Plan</label>
    <nameField>
        <label>Mgt Actions Work Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mgt Actions Works Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>